--- a/FabricsWebApplication/Views/Shared/_Layout.cshtml
+++ b/FabricsWebApplication/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                              <li>@Html.ActionLink("Create", "Create", "Create")</li>
                             <li>@Html.ActionLink("View", "ViewExample", "Create")</li>
+                            <li>@Html.ActionLink("AddPrices", "AddPrices", "Create")</li>
                         </ul>
                     </nav>
                 </div>
