--- a/FabricsWebApplication/Views/Create/ViewExample.cshtml
+++ b/FabricsWebApplication/Views/Create/ViewExample.cshtml
@@ -14,14 +14,24 @@
 
     <table>
         <tr>
+            <th>Id</th>
             <th>First Name</th>
             <th>Last Name</th>
-            <th>Age</th>
+            <th>Email</th>
+            <th>Address</th>
+            <th>CellPhone</th>
+            <th>DeskPhone</th>
+            <th>AccountNumber</th>
+            <th>BankName</th>
+            <th>Price</th>
 
         </tr>
        @foreach (var ex in Model) { 
        
            <tr> 
+                <td>
+             @Html.DisplayFor(modelItem => ex.Id.Increment)
+                 </td>
                <td>
              @Html.DisplayFor(modelItem => ex.FirstName)
                  </td>
@@ -30,8 +40,30 @@
              @Html.DisplayFor(modelItem => ex.LastName)
                  </td>
                <td>
+             @Html.DisplayFor(modelItem => ex.Email)
+                 </td>
+                 <td>
+             @Html.DisplayFor(modelItem => ex.Address)
+                 </td>
+
+               <td>
              @Html.DisplayFor(modelItem => ex.CellPhones)
                  </td>
+               <td>
+             @Html.DisplayFor(modelItem => ex.DeskPhones)
+                 </td>
+                <td>
+             @Html.DisplayFor(modelItem => ex.Bank.AccountNumber)
+                 </td>
+               <td>
+             @Html.DisplayFor(modelItem => ex.Bank.BankName)
+                 </td>
+               @foreach(var p in  ex.Prices){
+               <td>
+                   
+             @Html.DisplayFor(modelItem => p.Price)
+                 </td>
+               }
            </tr>           
        }
     </table>
