--- a/FabricsWebApplication/Views/Shared/_Layout.cshtml
+++ b/FabricsWebApplication/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                              <li>@Html.ActionLink("Create", "Create", "Create")</li>
-                            <li>@Html.ActionLink("View", "ViewExample", "Create")</li>
-                            <li>@Html.ActionLink("AddPrices", "AddPrices", "Create")</li>
+                            <li>@Html.ActionLink("View", "View1", "Show")</li>
+                            <li>@Html.ActionLink("Add", "Add", "Add")</li>
                         </ul>
                     </nav>
                 </div>
