--- a/FabricsWebApplication/Views/Create/Create.cshtml
+++ b/FabricsWebApplication/Views/Create/Create.cshtml
@@ -4,78 +4,19 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Create a new account.</h2>
+    <h1>Create</h1>
 </hgroup>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <fieldset>
-        <legend>Registration Form</legend>
-        <ol>
-            <li>
-                @Html.Label(    "First Name:")
-                @Html.TextBoxFor(m => m.FirstName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.LastName)
-                @Html.TextBoxFor(m => m.LastName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Email)
-                @Html.TextBoxFor(m => m.Email)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Address)
-                @Html.TextBoxFor(m => m.Address)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Bank.AccountNumber)
-                @Html.TextBoxFor(m => m.Bank.AccountNumber)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Bank.BankName)
-                @Html.TextBoxFor(m => m.Bank.BankName)
-            </li>
-           
+   <ul>
+       <li>@Html.ActionLink("Create Customer","CreateCustomer","Create")</li>
+       <li>@Html.ActionLink("Create Supplier","CreateSupplier","Create")</li>
+       <li>@Html.ActionLink("Create Employee","CreateEmployee","Create")</li>
 
-
-        </ol>
-        <input type="submit" value="Create" />
-    </fieldset>
-    <div>
-        <table>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-
-        </tr>
-    
-           <tr> 
-               <td>
-             @Html.DisplayFor(modelItem => Model.FirstName)
-                 </td>
-
-               <td>
-             @Html.DisplayFor(modelItem => Model.LastName)
-                 </td>
-                <td>
-             @Html.DisplayFor(modelItem => Model.Email)
-                 </td>
-                <td>
-             @Html.DisplayFor(modelItem => Model.Address)
-                 </td>
-               <td>
-             @Html.DisplayFor(modelItem => Model.CellPhones)
-                 </td>
-           </tr>           
-    </table>
-   
-
-    </div>
+   </ul>
 }
 
 @section Scripts {
