--- a/FabricsWebApplication/Views/Show/ViewEmployee.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewEmployee.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<FabricsFactoryMethodPattern.Entities.Customer>
+﻿@model IEnumerable<FabricsFactoryMethodPattern.Entities.Employee>
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Supplier";
 }
 
 <hgroup class="title">
@@ -17,13 +17,15 @@
             <th>Id</th>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>BirthDay</th>
             <th>Email</th>
             <th>Address</th>
+            <th>IdentityCardNumber</th>
+            <th>Salary</th>
             <th>CellPhone</th>
             <th>DeskPhone</th>
-            <th>AccountNumber</th>
-            <th>BankName</th>
-            <th>Price</th>
+            <th>JoinDate</th>
+            <th>Degree</th>
 
         </tr>
        @foreach (var ex in Model) { 
@@ -39,13 +41,21 @@
                <td>
              @Html.DisplayFor(modelItem => ex.LastName)
                  </td>
+                <td>
+             @Html.DisplayFor(modelItem => ex.BirthDate)
+                 </td>
                <td>
              @Html.DisplayFor(modelItem => ex.Email)
                  </td>
                  <td>
              @Html.DisplayFor(modelItem => ex.Address)
                  </td>
-
+                <td>
+             @Html.DisplayFor(modelItem => ex.IdentityCardNumber)
+                 </td>
+                <td>
+             @Html.DisplayFor(modelItem => ex.Salary)
+                 </td>
                <td>
              @Html.DisplayFor(modelItem => ex.CellPhones)
                  </td>
@@ -53,17 +63,12 @@
              @Html.DisplayFor(modelItem => ex.DeskPhones)
                  </td>
                 <td>
-             @Html.DisplayFor(modelItem => ex.Bank.AccountNumber)
+             @Html.DisplayFor(modelItem => ex.JoinDate)
                  </td>
                <td>
-             @Html.DisplayFor(modelItem => ex.Bank.BankName)
+             @Html.DisplayFor(modelItem => ex.Degree)
                  </td>
-               @foreach(var p in  ex.Prices){
-               <td>
-                   
-             @Html.DisplayFor(modelItem => p.Price)
-                 </td>
-               }
+               
            </tr>           
        }
     </table>
