--- a/FabricsWebApplication/Views/Show/View1.cshtml
+++ b/FabricsWebApplication/Views/Show/View1.cshtml
@@ -15,6 +15,8 @@
        <li>@Html.ActionLink("View Customer","ViewCustomer","Show")</li>
        <li>@Html.ActionLink("View Supplier","ViewSupplier","Show")</li>
        <li>@Html.ActionLink("View Empoyee","ViewEmployee","Show")</li>
+        <li>@Html.ActionLink("View SalesOrder","ViewSalesOrder","Show")</li>
+       <li>@Html.ActionLink("View Fabrics","ViewFabrics","Show")</li>
 
    </ul>
 }
