--- a/FabricsWebApplication/Views/Show/ViewSupplier.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewSupplier.cshtml
@@ -4,8 +4,7 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Create a new account.</h2>
+    <h2>Supplier List</h2>
 </hgroup>
 
 @using (Html.BeginForm()) {
@@ -23,8 +22,6 @@
             <th>DeskPhone</th>
             <th>AccountNumber</th>
             <th>BankName</th>
-            <th>Price</th>
-
         </tr>
        @foreach (var ex in Model) { 
        
@@ -47,10 +44,10 @@
                  </td>
 
                <td>
-             @Html.DisplayFor(modelItem => ex.CellPhones)
+             @Html.DisplayFor(modelItem => ex.CellPhones[0].PhoneNumber)
                  </td>
                <td>
-             @Html.DisplayFor(modelItem => ex.DeskPhones)
+             @Html.DisplayFor(modelItem => ex.DeskPhones[0].PhoneNumber)
                  </td>
                 <td>
              @Html.DisplayFor(modelItem => ex.Bank.AccountNumber)
@@ -58,12 +55,7 @@
                <td>
              @Html.DisplayFor(modelItem => ex.Bank.BankName)
                  </td>
-               @foreach(var p in  ex.Prices){
-               <td>
-                   
-             @Html.DisplayFor(modelItem => p.Price)
-                 </td>
-               }
+              
            </tr>           
        }
     </table>
