--- a/FabricsWebApplication/Views/Add/Add.cshtml
+++ b/FabricsWebApplication/Views/Add/Add.cshtml
@@ -12,7 +12,7 @@
     @Html.ValidationSummary()
 
    <ul>
-       <li>@Html.ActionLink("Add Prices","AddPrices","Add")</li>
+       <li>@Html.ActionLink("Add Prices","AddPricesForSupplier","Add")</li>
 
    </ul>
 }
