--- a/FabricsWebApplication/Views/Create/Create.cshtml
+++ b/FabricsWebApplication/Views/Create/Create.cshtml
@@ -15,9 +15,15 @@
        <li>@Html.ActionLink("Create Customer","CreateCustomer","Create")</li>
        <li>@Html.ActionLink("Create Supplier","CreateSupplier","Create")</li>
        <li>@Html.ActionLink("Create Employee","CreateEmployee","Create")</li>
-        <li>@Html.ActionLink("Create Order","CreateSalesOrder","Create")</li>
-        <li>@Html.ActionLink("Create Fabrics","CreateFabrics","Create")</li>
-        <li>@Html.ActionLink("Create FabricsColor","CreateFabricsColor","Create")</li>
+       <li>@Html.ActionLink("Create SalesOrder","CreateSalesOrder","Create")</li>
+       <li>@Html.ActionLink("Create PurchaseOrder","CreatePurchaseOrder","Create")</li>
+       <li>@Html.ActionLink("Create Fabrics","CreateFabrics","Create")</li>
+       <li>@Html.ActionLink("Create FabricsColor","CreateFabricsColor","Create")</li>
+       <li>@Html.ActionLink("Create FabricsRoll","CreateFabricsRoll","Create")</li>
+       <li>@Html.ActionLink("Create FabricsPlots","CreateFabricsPlots","Create")</li>
+       <li>@Html.ActionLink("Create WareHouse","CreateWareHouse","Create")</li>
+       <li>@Html.ActionLink("Create PurchaseInvoice","CreatePurchaseInvoice","Create")</li>
+       <li>@Html.ActionLink("Create PaymentForSupplier","CreatePaymentForSupplier","Create")</li>
 
    </ul>
 }
