--- a/FabricsWebApplication/Views/Create/CreateFabricsPlots.cshtml
+++ b/FabricsWebApplication/Views/Create/CreateFabricsPlots.cshtml
@@ -1,6 +1,6 @@
-﻿@model FabricsFactoryMethodPattern.Entities.FabricsColor
+﻿@model FabricsFactoryMethodPattern.Entities.FabricsPlots
 @{
-    ViewBag.Title = "FabricsColor";
+    ViewBag.Title = "FabricsPlots";
 }
 
 <hgroup class="title">
@@ -15,13 +15,8 @@
         <legend>Registration Form</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.ColorName)
-                @Html.TextBoxFor(m => m.ColorName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.FabricsId)
-                @Html.DropDownListFor(m => m.FabricsId,(IEnumerable<SelectListItem>)ViewData["id"])
-               
+                @Html.LabelFor(m => m.Time)
+                @Html.TextBoxFor(m => m.Time, new {@type = "date" })
             </li>
         </ol>
         <input type="submit" value="Create" />
