--- a/FabricsWebApplication/Views/Create/CreateWareHouse.cshtml
+++ b/FabricsWebApplication/Views/Create/CreateWareHouse.cshtml
@@ -1,6 +1,6 @@
-﻿@model FabricsFactoryMethodPattern.Entities.FabricsColor
+﻿@model FabricsFactoryMethodPattern.Entities.WareHouse
 @{
-    ViewBag.Title = "FabricsColor";
+    ViewBag.Title = "WareHouse";
 }
 
 <hgroup class="title">
@@ -15,14 +15,18 @@
         <legend>Registration Form</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.ColorName)
-                @Html.TextBoxFor(m => m.ColorName)
+                @Html.LabelFor(m => m.Name)
+                @Html.TextBoxFor(m => m.Name)
             </li>
             <li>
-                @Html.LabelFor(m => m.FabricsId)
-                @Html.DropDownListFor(m => m.FabricsId,(IEnumerable<SelectListItem>)ViewData["id"])
-               
+                @Html.LabelFor(m => m.Areage)
+                @Html.TextBoxFor(m => m.Areage)
             </li>
+            <li>
+                @Html.LabelFor(m => m.Address)
+                @Html.TextBoxFor(m => m.Address)
+            </li>
+
         </ol>
         <input type="submit" value="Create" />
     </fieldset>
