--- a/FabricsWebApplication/Views/Show/View1.cshtml
+++ b/FabricsWebApplication/Views/Show/View1.cshtml
@@ -15,8 +15,16 @@
        <li>@Html.ActionLink("View Customer","ViewCustomer","Show")</li>
        <li>@Html.ActionLink("View Supplier","ViewSupplier","Show")</li>
        <li>@Html.ActionLink("View Empoyee","ViewEmployee","Show")</li>
-        <li>@Html.ActionLink("View SalesOrder","ViewSalesOrder","Show")</li>
+       <li>@Html.ActionLink("View SalesOrder","ViewSalesOrder","Show")</li>
+       <li>@Html.ActionLink("View PurchaseOrder","ViewPurchaseOrder","Show")</li>
        <li>@Html.ActionLink("View Fabrics","ViewFabrics","Show")</li>
+       <li>@Html.ActionLink("View FabricsColor","ViewFabricsColor","Show")</li>
+       <li>@Html.ActionLink("View FabricsRoll","ViewFabricsRoll","Show")</li>
+       <li>@Html.ActionLink("View FabricsPlots","ViewFabricsPlots","Show")</li>
+       <li>@Html.ActionLink("View WareHouse","ViewWareHouse","Show")</li>
+       <li>@Html.ActionLink("View PurchaseInvoice","ViewPurchaseInvoice","Show")</li>
+       <li>@Html.ActionLink("View Payment","ViewPayment","Show")</li>
+       <li>@Html.ActionLink("View Record","ViewRecord","Show")</li>
 
    </ul>
 }
