--- a/FabricsWebApplication/Views/Create/CreateSupplier.cshtml
+++ b/FabricsWebApplication/Views/Create/CreateSupplier.cshtml
@@ -38,6 +38,10 @@
                 @Html.LabelFor(m => m.Bank.BankName)
                 @Html.TextBoxFor(m => m.Bank.BankName)
             </li>
+            <li>
+                @Html.LabelFor(m => m.TaxNumber)
+                @Html.TextBoxFor(m => m.TaxNumber)
+            </li>
              <li>
                 @Html.LabelFor(m => m.CellPhones)
                 @Html.TextBoxFor(m => m.CellPhones[0].PhoneNumber, new { @class = "cellPhone"})
