--- a/FabricsWebApplication/Views/Show/ViewPurchaseOrder.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewPurchaseOrder.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<FabricsFactoryMethodPattern.Entities.SalesOrder>
+﻿@model IEnumerable<FabricsFactoryMethodPattern.Entities.PurchaseOrder>
 @{
-    ViewBag.Title = "Supplier";
+    ViewBag.Title = "PurchaseOrder";
 }
 
 <hgroup class="title">
-    <h2>SalesOrder List</h2>
+    <h2>PurchaseOrder List</h2>
 </hgroup>
 
 @using (Html.BeginForm()) {
@@ -13,7 +13,7 @@
 
     <table>
         <tr>
-            <th>IdCustomer</th>
+            <th>IdEmployee</th>
             <th>Time</th>
             <th>FabricsColorId</th>
             <th>TotalRoll</th>
@@ -23,7 +23,7 @@
        
            <tr> 
                 <td>
-             @Html.DisplayFor(modelItem => ex.CustomerId.Increment)
+             @Html.DisplayFor(modelItem => ex.EmployeeId.Increment)
                  </td>
                <td>
              @Html.DisplayFor(modelItem => ex.Time)
