--- a/FabricsWebApplication/Views/Create/Create.cshtml
+++ b/FabricsWebApplication/Views/Create/Create.cshtml
@@ -15,6 +15,7 @@
        <li>@Html.ActionLink("Create Customer","CreateCustomer","Create")</li>
        <li>@Html.ActionLink("Create Supplier","CreateSupplier","Create")</li>
        <li>@Html.ActionLink("Create Employee","CreateEmployee","Create")</li>
+       <li>@Html.ActionLink("Create Delivery","CreateDelivery","Create")</li>
        <li>@Html.ActionLink("Create SalesOrder","CreateSalesOrder","Create")</li>
        <li>@Html.ActionLink("Create PurchaseOrder","CreatePurchaseOrder","Create")</li>
        <li>@Html.ActionLink("Create Fabrics","CreateFabrics","Create")</li>
