--- a/FabricsWebApplication/Views/Create/Create.cshtml
+++ b/FabricsWebApplication/Views/Create/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FabricsFactoryMethodPattern.Entities.Customer
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Create";
 }
 
 <hgroup class="title">
