--- a/FabricsWebApplication/Views/Show/ViewPurchaseOrder.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewPurchaseOrder.cshtml
@@ -10,8 +10,9 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
-
-    <table>
+             
+  <table class="table table-hover">
+    <thead>
         <tr>
             <th>IdEmployee</th>
             <th>Time</th>
@@ -19,6 +20,8 @@
             <th>TotalRoll</th>
             <th>TotalMetter</th>
         </tr>
+    </thead>
+    <tbody>
        @foreach (var ex in Model) { 
        
            <tr> 
@@ -40,6 +43,7 @@
                  </td>
            </tr>           
        }
+    </tbody>
     </table>
    
 }
