--- a/FabricsWebApplication/Views/Show/ViewCustomer.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewCustomer.cshtml
@@ -12,8 +12,8 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <table>
-        <tr>
+    <table class="table table-hover">
+        <thead>
             <th>Id</th>
             <th>First Name</th>
             <th>Last Name</th>
@@ -24,10 +24,10 @@
             <th>AccountNumber</th>
             <th>BankName</th>
 
-        </tr>
+        </thead>
+        <tbody>
         @foreach (var ex in Model)
         { 
-       
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => ex.Id.Increment)
@@ -47,10 +47,17 @@
                 </td>
 
                 <td>
-                    @Html.DisplayFor(modelItem => ex.CellPhones[0].PhoneNumber)
+                    @foreach(var cellphone in ex.CellPhones)
+                    {
+                       <p>@Html.DisplayFor(modelItem => cellphone.PhoneNumber)</p>
+                    }
+                        
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => ex.DeskPhones[0].PhoneNumber)
+                    @foreach(var deskphone in ex.DeskPhones)
+                    {
+                       <p>@Html.DisplayFor(modelItem => deskphone.PhoneNumber)</p>
+                    }
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => ex.Bank.AccountNumber)
@@ -60,6 +67,7 @@
                 </td>
             </tr>           
         }
+            </tbody>
     </table>
    
 }
