--- a/FabricsWebApplication/Views/Show/ViewEmployee.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewEmployee.cshtml
@@ -11,8 +11,8 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <table>
-        <tr>
+    <table class="table table-hover">
+        <thead>
             <th>Id</th>
             <th>First Name</th>
             <th>Last Name</th>
@@ -26,7 +26,9 @@
             <th>JoinDate</th>
             <th>Degree</th>
 
-        </tr>
+        </thead>
+        
+        <tbody>
        @foreach (var ex in Model) { 
        
            <tr> 
@@ -56,11 +58,18 @@
              @Html.DisplayFor(modelItem => ex.Salary)
                  </td>
                <td>
-             @Html.DisplayFor(modelItem => ex.CellPhones[0].PhoneNumber)
-                 </td>
-               <td>
-             @Html.DisplayFor(modelItem => ex.DeskPhones[0].PhoneNumber)
-                 </td>
+                    @foreach(var cellphone in ex.CellPhones)
+                    {
+                       <p>@Html.DisplayFor(modelItem => cellphone.PhoneNumber)</p>
+                    }
+                        
+                </td>
+                <td>
+                    @foreach(var deskphone in ex.DeskPhones)
+                    {
+                       <p>@Html.DisplayFor(modelItem => deskphone.PhoneNumber)</p>
+                    }
+                </td>
                 <td>
              @Html.DisplayFor(modelItem => ex.JoinDate)
                  </td>
@@ -68,8 +77,9 @@
              @Html.DisplayFor(modelItem => ex.Degree)
                  </td>
                
-           </tr>           
+           </tr>      
        }
+            </tbody>     
     </table>
    
 }
