--- a/FabricsWebApplication/Views/Show/ViewFabrics.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewFabrics.cshtml
@@ -10,13 +10,16 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
-
-    <table>
+     
+        <table class="table table-hover">
+    <thead>
         <tr>
             <th>IdFabrics</th>
             <th>Name</th>
             <th>Description</th>
         </tr>
+    </thead>
+    <tbody>
        @foreach (var ex in Model) { 
        
            <tr> 
@@ -29,8 +32,9 @@
                  <td>
              @Html.DisplayFor(modelItem => ex.Description)
                  </td>
-           </tr>           
-       }
+           </tr>   
+       }        
+    </tbody>
     </table>
    
 }
