--- a/FabricsWebApplication/Views/Show/ViewFabricsPlots.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewFabricsPlots.cshtml
@@ -10,12 +10,15 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
-
-    <table>
+             
+  <table class="table table-hover">
+    <thead>
         <tr>
             <th>IdFabrics</th>
             <th>Time</th>
         </tr>
+    </thead>
+    <tbody>
        @foreach (var ex in Model) {
            <tr> 
                 <td>
@@ -26,6 +29,7 @@
                  </td> 
             </tr>   
        }
+    </tbody>
     </table>
    
 }
