--- a/FabricsWebApplication/Views/Show/ViewFabricsRoll.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewFabricsRoll.cshtml
@@ -10,8 +10,9 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
-
-    <table>
+             
+  <table class="table table-hover">
+    <thead>
         <tr>
             <th>IdFabricsRoll</th>
             <th>PurchaseInvoiceId</th>
@@ -19,6 +20,8 @@
             <th>FabricsColorId</th>
             <th>FabricsPlotsId</th>
         </tr>
+    </thead>
+    <tbody>
        @foreach (var ex in Model) { 
        
            <tr> 
@@ -39,6 +42,7 @@
                  </td>
            </tr>           
        }
+    </tbody>
     </table>
    
 }
