--- a/FabricsWebApplication/Views/Show/ViewPurchaseInvoice.cshtml
+++ b/FabricsWebApplication/Views/Show/ViewPurchaseInvoice.cshtml
@@ -10,8 +10,9 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
-
-    <table style ="border : 2px solid">
+             
+  <table class="table table-hover">
+    <thead>
         <tr>
             <th>Id</th>
             <th>EmployeeId</th>
@@ -22,6 +23,8 @@
             <th>Time</th>
             <th>TotalMoney</th>
         </tr>
+    </thead>
+    <tbody>
        @foreach (var ex in Model) { 
            <tr> 
                  <td>
@@ -51,6 +54,7 @@
                </td>
            </tr>           
        }
+    </tbody>
     </table>
    
 }
